[package]
name = "los-angeles-directory-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-rt = "2.8.0"
actix-web = "4.3.1"
arguments = "0.7.2"
bb8 = "0.8.1"
bb8-postgres = "0.8.1"
chrono = {version = "0.4.26",features = ["serde"]}
diesel = {version = "2.1.0", features = ["postgres", "r2d2", "uuid", "chrono"]}
diesel_migrations = { version = "2.1.0"}
dotenv = "0.15.0"
firebase-auth = "0.2.1"
lazy_static = "1.4.0"
listenfd = "1.0.1"
r2d2 = "0.8.10"
r2d2_postgres = "0.18.1"
serde = "1.0.186"
serde_json = "1.0.105"
tokio = "1.32.0"
tokio-postgres = "0.7.9"
uuid = "1.4.1"
